--- a/src/component/List/ListElement.module.css
+++ b/src/component/List/ListElement.module.css
@@ -50,7 +50,7 @@
     background-color: rgb(245, 215, 215);
     color: red;
     composes: issue_label_o;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .issue_label_i:hover {
@@ -217,6 +217,7 @@
     color: red;
     background-color: rgb(252, 210, 210) !important;
     border-radius: 0px;
+    font-size: 16px !important;
     composes: edit_label_list_open;
 }
 
@@ -225,7 +226,7 @@
 }
 
 .edit_label_list_done {
-    composes: edit_label_list_in_progress;
+    composes: edit_label_list_open;
     color: green;
     background-color: rgb(192, 253, 198) !important;
 }
